# euterpea-just-intonation

./: .gitignore  AppMain.hs  CLAUDE.md  DEVELOPER_README.md  ErrorHandler.hs  Examples.hs  JustIntonationCore.hs  Main.hs  MainGUI.hs  MyMusic.hs  README.md  TRACKER_DESIGN.md  TestSDL.hs  TestWeb.hs  TrackerMain.hs  TrackerParser.hs  TrackerSDL.hs  TrackerTest.hs  TrackerToMusic.hs  TrackerTypes.hs  TrackerWeb.hs  WINDOWS_README.md  build-windows-web.sh  build-windows.sh  cabal.project  complex_example_tracker.json  euterpea2-project.cabal  example-html-tracker.html  example_tracker.json  index.html  install_deps.sh  install_sdl_deps.sh  instrument_test_tracker.json  user_example_tracker.json
.github/workflows/: windows-build.yml
