cabal-version:      3.0
name:               euterpea2-project
version:            0.1.0.0
synopsis:           Euterpea2 and HSoM examples
description:        Examples using Euterpea2 and Haskell School of Music
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
category:           Music
build-type:         Simple

common warnings
    ghc-options: -Wall

executable euterpea2-project
    import:           warnings
    main-is:          AppMain.hs
    other-modules:    Main,
                      MainGUI,
                      TrackerTypes,
                      TrackerParser,
                      TrackerToMusic,
                      TrackerMain,
                      TrackerTest
    build-depends:    base ^>=4.16.0.0,
                      Euterpea,
                      HSoM,
                      UISF,
                      directory,
                      aeson,
                      text,
                      bytestring
    hs-source-dirs:   .
    default-language: Haskell2010
