cabal-version:      2.4
name:               euterpea2-project
version:            0.1.0.0
synopsis:           Euterpea2 and HSoM examples
description:        Examples using Euterpea2 and Haskell School of Music
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
category:           Music
build-type:         Simple

common warnings
    ghc-options: -Wall

executable euterpea2-project
    import:           warnings
    main-is:          AppMain.hs
    other-modules:    Main,
                      MainGUI,
                      JustIntonationCore,
                      TrackerTypes,
                      TrackerParser,
                      TrackerToMusic,
                      TrackerMain,
                      TrackerWeb,
                      ErrorHandler
    -- Exclude unused SDL interface
    -- other-modules:    TrackerSDL
    build-depends:    base ^>=4.12.0.0,
                      Euterpea,
                      HSoM,
                      UISF,
                      directory,
                      aeson,
                      text,
                      bytestring,
                      process,
                      ansi-terminal,
                      temporary,
                      filepath,
                      time,
                      vector,
                      containers,
                      threepenny-gui
    hs-source-dirs:   .
    default-language: Haskell2010

executable test-web
    import:           warnings
    main-is:          TestWeb.hs
    other-modules:    TrackerTypes,
                      TrackerParser,
                      TrackerToMusic,
                      TrackerWeb,
                      ErrorHandler,
                      JustIntonationCore
    build-depends:    base ^>=4.12.0.0,
                      Euterpea,
                      HSoM,
                      directory,
                      aeson,
                      text,
                      bytestring,
                      process,
                      ansi-terminal,
                      temporary,
                      filepath,
                      time,
                      vector,
                      containers,
                      threepenny-gui
    hs-source-dirs:   .
    default-language: Haskell2010